--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -79,7 +79,8 @@
     &__image {
         min-width: 296px;
         height: 364px;
-        box-shadow: 1px 1px 8px 0px rgba(21, 16, 15, 0.5);
+        background: lightgray -21.856px 0px / 122.973% 100% no-repeat;
+        box-shadow: 1px 1px 8px 0px rgba(21, 16, 15, 0.50);
         border-radius: 8px;
 
         @media screen and (min-width: 834px) {
@@ -100,7 +101,6 @@
     }
 
     &__title--hidden {
-
         @media screen and (min-width: 834px) {
             display: none;
         }
@@ -108,36 +108,35 @@
         @media screen and (min-width: 1440px) {
             display: contents;
         }
-
-        @media screen and (min-width: 1728px) {}
     }
 
     &__title {
         position: relative;
         margin: 0;
-        background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
-        box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
-        backdrop-filter: blur(7.5px);
-        border-radius: 0px 0px 8px 8px;
-
+        width: 296px;
+        height: 72px;
+        bottom: 72px;
+        padding: 24px 20px;
         font-family: var(--title_font);
         font-size: 16px;
         line-height: 150%;
+        font-weight: 700;
         letter-spacing: 0.15em;
         text-transform: uppercase;
         color: #FFFFFF;
+        background: linear-gradient(135deg, rgba(240, 243, 246, 0.70) 0%, rgba(226, 231, 235, 0.00) 100%);
+        box-shadow: 0px 1px 1px 0px rgba(21, 16, 15, 0.40) inset;
+        backdrop-filter: blur(7.5px);
+        border-radius: 0px 0px 8px 8px;
 
         @media screen and (min-width: 834px) {
             width: 200px;
-            height: 72px;
             padding: 24px 8px;
-            bottom: 72px;
             font-size: 13px;
         }
 
         @media screen and (min-width: 1440px) {
             width: 296px;
-            height: 72px;
             padding: 24px 20px;
             font-size: 16px;
         }
@@ -148,29 +147,12 @@
             bottom: 84px;
             padding: 28px 26px;
             font-size: 20px;
-
-            // text-align: center;
-            // font-weight: 700;
         }
     }
 
     &__title--type2 {
-        // position: relative;
-        // bottom: 84px;
-        // width: 360px;
-        // height: 84px;
-        // margin: 0;
-        // background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
-        // box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
-        // backdrop-filter: blur(7.5px);
-        // border-radius: 0px 0px 8px 8px;
+        padding: 12px 20px;
 
-        // font-family: var(--title_font);
-        // font-size: 16px;
-        // line-height: 150%;
-        // letter-spacing: 0.15em;
-        // text-transform: uppercase;
-        // color: #FFFFFF;
         @media screen and (min-width: 834px) {
             padding: 16px 0px;
         }
