--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'utils/visually-hidden';
 @import 'utils/text-hidden';
 @import 'components/caption';
+@import 'base/slider';
 
 //Header section
 @import 'layouts/header';
