--- a/css/main.css
+++ b/css/main.css
@@ -1742,4 +1742,107 @@ body {
   .card__title--type2 {
     padding: 12px 32px;
   }
+}
+
+.about__image {
+  background-size: cover;
+}
+@media screen and (min-width: 834px) {
+  .about__image {
+    margin-top: -24px;
+    width: 541px;
+    height: 724px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__image {
+    margin-top: -64px;
+    width: 728px;
+    height: 972px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__image {
+    width: 896px;
+    height: 1200px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_tab.jpg");
+  }
+}
+@media screen and (min-width: 834px) and (min-device-pixel-ratio: 2) and (min-width: 834px), screen and (min-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px), screen and (min-width: 834px) and (min-resolution: 192dpi) and (min-width: 834px), screen and (min-width: 834px) and (min-resolution: 2dppx) and (min-width: 834px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_tab@2x.jpg");
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_desk.jpg");
+  }
+}
+@media screen and (min-width: 1440px) and (min-device-pixel-ratio: 2) and (min-width: 1440px), screen and (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px), screen and (min-width: 1440px) and (min-resolution: 192dpi) and (min-width: 1440px), screen and (min-width: 1440px) and (min-resolution: 2dppx) and (min-width: 1440px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_desk@2x.jpg");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_mac.jpg");
+  }
+}
+@media screen and (min-width: 1728px) and (min-device-pixel-ratio: 2) and (min-width: 1728px), screen and (min-width: 1728px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1728px), screen and (min-width: 1728px) and (min-resolution: 192dpi) and (min-width: 1728px), screen and (min-width: 1728px) and (min-resolution: 2dppx) and (min-width: 1728px) {
+  .about__image--left {
+    background-image: url("/images/index/jpg/about-left_mac@2x.jpg");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__list-item {
+    width: 576px;
+    height: 364px;
+    padding: 8px;
+    border-radius: 30px;
+    border: 4px solid #F0F3F6;
+    background: #FFF;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item-area {
+    width: 560px;
+    height: 348px;
+    padding: 12px;
+    border-radius: 30px;
+    background: #F0F3F6;
+  }
+}
+@media screen and (min-width: 834px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_tab.jpg");
+  }
+}
+@media screen and (min-width: 834px) and (min-device-pixel-ratio: 2) and (min-width: 834px), screen and (min-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px), screen and (min-width: 834px) and (min-resolution: 192dpi) and (min-width: 834px), screen and (min-width: 834px) and (min-resolution: 2dppx) and (min-width: 834px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_tab@2x.jpg");
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_desk.jpg");
+  }
+}
+@media screen and (min-width: 1440px) and (min-device-pixel-ratio: 2) and (min-width: 1440px), screen and (min-width: 1440px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px), screen and (min-width: 1440px) and (min-resolution: 192dpi) and (min-width: 1440px), screen and (min-width: 1440px) and (min-resolution: 2dppx) and (min-width: 1440px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_desk@2x.jpg");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_mac.jpg");
+  }
+}
+@media screen and (min-width: 1728px) and (min-device-pixel-ratio: 2) and (min-width: 1728px), screen and (min-width: 1728px) and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1728px), screen and (min-width: 1728px) and (min-resolution: 192dpi) and (min-width: 1728px), screen and (min-width: 1728px) and (min-resolution: 2dppx) and (min-width: 1728px) {
+  .about__image--right {
+    background-image: url("/images/index/jpg/about-right_mac@2x.jpg");
+  }
 }/*# sourceMappingURL=main.css.map */
