--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0em;
+  letter-spacing: 0.15em;
   color: var(--title_color);
   text-align: center;
 }
@@ -189,11 +189,13 @@ body {
 }
 
 .caption {
+  position: relative;
   margin: 0 auto;
   padding-top: 114px;
   width: auto;
   height: 156px;
   background-image: url("/images/index/png/caption-background_mob.png");
+  z-index: 1;
 }
 @media screen and (min-width: 390px) {
   .caption {
@@ -1745,18 +1747,17 @@ body {
 }
 
 .about__image {
+  position: absolute;
   background-size: cover;
 }
 @media screen and (min-width: 834px) {
   .about__image {
-    margin-top: -24px;
     width: 541px;
     height: 724px;
   }
 }
 @media screen and (min-width: 1440px) {
   .about__image {
-    margin-top: -64px;
     width: 728px;
     height: 972px;
   }
@@ -1769,6 +1770,8 @@ body {
 }
 @media screen and (min-width: 834px) {
   .about__image--left {
+    left: 40px;
+    margin-top: -24px;
     background-image: url("/images/index/jpg/about-left_tab.jpg");
   }
 }
@@ -1777,8 +1780,16 @@ body {
     background-image: url("/images/index/jpg/about-left_tab@2x.jpg");
   }
 }
+@media screen and (min-width: 1140px) {
+  .about__image--left {
+    left: 160px;
+    margin-top: -28px;
+  }
+}
 @media screen and (min-width: 1440px) {
   .about__image--left {
+    left: 86px;
+    margin-top: -64px;
     background-image: url("/images/index/jpg/about-left_desk.jpg");
   }
 }
@@ -1789,6 +1800,7 @@ body {
 }
 @media screen and (min-width: 1728px) {
   .about__image--left {
+    left: 80px;
     background-image: url("/images/index/jpg/about-left_mac.jpg");
   }
 }
@@ -1797,27 +1809,210 @@ body {
     background-image: url("/images/index/jpg/about-left_mac@2x.jpg");
   }
 }
+.about__list-item {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background-color: #FFF;
+  z-index: 1;
+}
+@media screen and (min-width: 834px) {
+  .about__list-item {
+    width: 424px;
+    height: 232px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__list-item {
+    width: 528px;
+    height: 280px;
+  }
+}
 @media screen and (min-width: 1728px) {
   .about__list-item {
     width: 576px;
     height: 364px;
-    padding: 8px;
-    border-radius: 30px;
-    border: 4px solid #F0F3F6;
-    background: #FFF;
+  }
+}
+.about__item--1 {
+  border: 4px solid var(--grey_color);
+}
+@media screen and (min-width: 834px) {
+  .about__item--1 {
+    right: 40px;
+    margin-top: -24px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .about__item--1 {
+    right: 140px;
+    margin-top: -4px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item--1 {
+    right: 86px;
+    margin-top: 16px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item--1 {
+    right: 80px;
+  }
+}
+.about__item--2 {
+  border: 4px solid var(--rose_color);
+}
+@media screen and (min-width: 834px) {
+  .about__item--2 {
+    right: 40px;
+    margin-top: 340px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .about__item--2 {
+    right: 288px;
+    margin-top: 360px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item--2 {
+    right: 300px;
+    margin-top: 380px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item--2 {
+    right: 346px;
+    margin-top: 464px;
+  }
+}
+.about__item--3 {
+  border: 4px solid var(--blue_color);
+}
+@media screen and (min-width: 834px) {
+  .about__item--3 {
+    left: 40px;
+    margin-top: 712px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .about__item--3 {
+    left: 200px;
+    margin-top: 800px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item--3 {
+    left: 86px;
+    margin-top: 1000px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item--3 {
+    left: 112px;
+    margin-top: 1228px;
+  }
+}
+.about__item--4 {
+  border: 4px solid var(--orange_color);
+}
+@media screen and (min-width: 834px) {
+  .about__item--4 {
+    left: 40px;
+    margin-top: 1182px;
+  }
+}
+@media screen and (min-width: 1140px) {
+  .about__item--4 {
+    left: 312px;
+    margin-top: 1192px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item--4 {
+    left: 300px;
+    margin-top: 1364px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item--4 {
+    left: 410px;
+    margin-top: 1676px;
+  }
+}
+.about__item-area {
+  padding: 11px;
+  border-radius: 30px;
+}
+@media screen and (min-width: 834px) {
+  .about__item-area {
+    width: 408px;
+    height: 216px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item-area {
+    width: 512px;
+    height: 264px;
+    padding: 12px;
   }
 }
 @media screen and (min-width: 1728px) {
   .about__item-area {
     width: 560px;
     height: 348px;
-    padding: 12px;
-    border-radius: 30px;
-    background: #F0F3F6;
+  }
+}
+.about__area--1 {
+  background-color: var(--grey_color);
+}
+.about__area--2 {
+  background-color: var(--rose_color);
+}
+.about__area--3 {
+  background-color: var(--blue_color);
+}
+.about__area--4 {
+  background-color: var(--orange_color);
+}
+@media screen and (min-width: 834px) {
+  .about__area--4 {
+    padding-left: 32px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__area--4 {
+    padding-left: 38px;
+  }
+}
+.about__item-text {
+  text-align: left;
+  font-weight: 300;
+  color: var(--text_color);
+  font-family: var(--text_font);
+}
+@media screen and (min-width: 834px) {
+  .about__item-text {
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .about__item-text {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .about__item-text {
+    font-size: 24px;
   }
 }
 @media screen and (min-width: 834px) {
   .about__image--right {
+    right: 40px;
+    margin-top: 694px;
     background-image: url("/images/index/jpg/about-right_tab.jpg");
   }
 }
@@ -1826,8 +2021,16 @@ body {
     background-image: url("/images/index/jpg/about-right_tab@2x.jpg");
   }
 }
+@media screen and (min-width: 1140px) {
+  .about__image--right {
+    right: 140px;
+    margin-top: 696px;
+  }
+}
 @media screen and (min-width: 1440px) {
   .about__image--right {
+    right: 86px;
+    margin-top: 656px;
     background-image: url("/images/index/jpg/about-right_desk.jpg");
   }
 }
@@ -1838,6 +2041,8 @@ body {
 }
 @media screen and (min-width: 1728px) {
   .about__image--right {
+    right: 80px;
+    margin-top: 804px;
     background-image: url("/images/index/jpg/about-right_mac.jpg");
   }
 }
