--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -20,8 +20,21 @@
         }
     }
 
-    &__image--left {
+    &__mob-image {
+        width: 334px;
+        height: 264px;
+        margin-top: 20px;
+
         @media screen and (min-width: 834px) {
+            display: none;
+        }
+    }
+
+    &__image--left {
+        display: none;
+
+        @media screen and (min-width: 834px) {
+            display: block;
             left: 40px;
             margin-top: -24px;
             background-image: url("/images/index/jpg/about-left_tab.jpg");
@@ -66,15 +79,17 @@
     }
 
     &__list-item {
-        position: absolute;
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 334px;
+        height: 280px;
         border-radius: 30px;
         background-color: #FFF;
         z-index: 1;
 
         @media screen and (min-width: 834px) {
+            position: absolute;
             width: 424px;
             height: 232px;
         }
@@ -91,11 +106,13 @@
     }
 
     &__item--1 {
-        border: 4px solid var(--grey_color);
+        display: none;
 
         @media screen and (min-width: 834px) {
+            display: flex;
             right: 40px;
             margin-top: -24px;
+            border: 4px solid var(--grey_color);
         }
 
         @media screen and (min-width: 1140px) {
@@ -114,6 +131,7 @@
     }
 
     &__item--2 {
+        margin-top: 48px;
         border: 4px solid var(--rose_color);
 
         @media screen and (min-width: 834px) {
@@ -138,6 +156,7 @@
     }
 
     &__item--3 {
+        margin-top: 20px;
         border: 4px solid var(--blue_color);
 
         @media screen and (min-width: 834px) {
@@ -162,11 +181,13 @@
     }
 
     &__item--4 {
-        border: 4px solid var(--orange_color);
+        display: none;
 
         @media screen and (min-width: 834px) {
+            display: flex;
             left: 40px;
             margin-top: 1182px;
+            border: 4px solid var(--orange_color);
         }
 
         @media screen and (min-width: 1140px) {
@@ -186,6 +207,8 @@
     }
 
     &__item-area {
+        width: 318px;
+        height: 264px;
         padding: 11px;
         border-radius: 30px;
 
@@ -235,11 +258,13 @@
     &__item-text {
         text-align: left;
         font-weight: 300;
+        line-height: 140%;
         color: var(--text_color);
         font-family: var(--text_font);
 
         @media screen and (min-width: 834px) {
             font-size: 16px;
+            line-height: 150%;
         }
 
         @media screen and (min-width: 1440px) {
@@ -252,7 +277,10 @@
     }
 
     &__image--right {
+        display: none;
+
         @media screen and (min-width: 834px) {
+            display: block;
             right: 40px;
             margin-top: 694px;
             background-image: url("/images/index/jpg/about-right_tab.jpg");
